[package]
name = "rompot"
version = "0.1.0"
authors = ["Jesus Bracho <jessebracho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["crossterm"]

[dependencies]
argh = "0.1.3"
byteorder = "1.3.4"
num = "0.2"
num-derive = "0.3"
num-traits = "0.2"
crossterm = { version = "0.17", optional = true }
tui = { version = "0.12", default-features = false, features = ['crossterm'] }